libs/@local/hashql/hir/tests/ui/lower/inference/bind-arguments-explicit.jsonc
//@ run: fail
//@ description: Bind generic arguments
[
  "`+`<Number, Number>",
  //~^ ERROR Type variable has incompatible upper and lower bounds
  { "#literal": 42.12 },
  { "#literal": "42" }
]
